Se renombre directorio del módulo de API.
