# Swagger/src/swagger-config.yaml
@@ -77,7 +77,7 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/listings:
+  /modules/v1/listings:
     get:
       tags:
         - "Listados"
@@ -106,7 +106,7 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/listings/rows/{source}/{id}:
+  /modules/v1/listings/rows/{source}/{id}:
     get:
       tags:
         - "Listados"
@@ -156,7 +156,7 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/company/config/{nit}:
+  /modules/v1/company/config/{nit}:
     get:
       tags:
         - "Empresas"
@@ -889,7 +889,7 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/Config/software/{nit}:
+  /modules/v1/config/software/{nit}:
     put:
       tags:
         - "Configuración"
@@ -959,7 +959,7 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/Config/certificate/{nit}:
+  /modules/v1/config/certificate/{nit}:
     put:
       tags:
         - "Configuración"
@@ -1030,7 +1030,69 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/resolution/config/{nit}/{id}:
+  /modules/v1/config/logo/{nit}:
+    put:
+      tags:
+        - "Configuración"
+      summary: "(ES): Actualizar logo empresa. (EN): Company logo update."
+      produces:
+        - "application/json"
+      parameters:
+        - name: nit
+          in: path
+          description: NIT de empresa
+          required: true
+          type: string
+          format: string
+      requestBody:
+        description: Objeto para actualizar la empresa.
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                logo:
+                  description: Imagen de logo en codificada en base64
+                  type: string
+            example:
+              logo: "base64"
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+  /modules/v1/resolution/config/{nit}/{id}:
     get:
       tags:
         - "Resoluciones"
@@ -1243,7 +1305,7 @@ paths:
               schema:
                 type: object
                 items: {}
-  /modules/facturacion/resolution/config/{nit}:
+  /modules/v1/resolution/config/{nit}:
     post:
       tags:
         - "Resoluciones"
